Jann 30/objects/ReportingUnit__c.object
<CustomObject>
    <description>RFA R1 - Stores all Reporting Units within the RFA Application to be referenced on a specific RFA.</description>
    <fields>
        <fullName>ActiveInactive__c</fullName>
        <label>Active/Inactive</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NeedRecalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Unit_Name__c</fullName>
        <label>Reporting Unit Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Reporting Unit</label>
    <listViews>
        <fullName>AllActive</fullName>
        <columns>NAME</columns>
        <columns>Reporting_Unit_Name__c</columns>
        <columns>ActiveInactive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All - Active</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive</fullName>
        <columns>NAME</columns>
        <columns>Reporting_Unit_Name__c</columns>
        <columns>ActiveInactive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All - Inactive</label>
    </listViews>
    <nameField>
        <label>Reporting Unit Number</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Id00000016kuSEAQ_00Nd0000005CLpnEAG</fullName>
        <active>true</active>
        <errorMessage>You may only select Active Reporting Units. Contact the appropriate Location Coordinator if you cannot find a particular Reporting Unit.</errorMessage>
        <field>RFA__c.PrimaryReportingUnitNumber__c</field>
        <filterItems>
            <field>ReportingUnit__c.ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>To view list of all Reporting Units enter RU* in search bar and click Go. Click Show Filters below for additional filter and search options.</infoMessage>
        <isOptional>false</isOptional>
        <name>RFA_Primary Reporting Unit #</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Id00000016kuSEAQ_00Nd0000005CQviEAG</fullName>
        <active>true</active>
        <errorMessage>You may only select Active Reporting Units. Contact the appropriate Location Coordinator if you cannot find a particular Reporting Unit.</errorMessage>
        <field>RFA__c.SecondReportingUnitNumber__c</field>
        <filterItems>
            <field>ReportingUnit__c.ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>To view list of all Reporting Units enter RU* in search bar and click Go. Click Show Filters below for additional filter and search options.</infoMessage>
        <isOptional>false</isOptional>
        <name>RFA_Second Reporting Unit #</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Id00000016kuSEAQ_00Nd0000005CQvsEAG</fullName>
        <active>true</active>
        <errorMessage>You may only select Active Reporting Units. Contact the appropriate Location Coordinator if you cannot find a particular Reporting Unit.</errorMessage>
        <field>RFA__c.ThirdReportingUnitNumber__c</field>
        <filterItems>
            <field>ReportingUnit__c.ActiveInactive__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>To view list of all Reporting Units enter RU* in search bar and click Go. Click Show Filters below for additional filter and search options.</infoMessage>
        <isOptional>false</isOptional>
        <name>RFA_Third Reporting Unit #</name>
    </namedFilters>
    <pluralLabel>Reporting Units</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>